// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutRow should render className in props 1`] = `
<div
  className="my-row row"
>
  <LayoutCol
    className="my-cell"
    componentClass="div"
  >
    Cell
  </LayoutCol>
</div>
`;

exports[`LayoutRow should render using specified componentClass in props 1`] = `
<b
  className="my-row row"
>
  <LayoutCol
    className="my-cell"
    componentClass="div"
  >
    Col
  </LayoutCol>
</b>
`;
